# website

./: .env  .gitignore  README.md  app.py  build.py  dev.sh  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
content/: stats.yaml
static/css/: homepage.css  input.css  output.css
static/js/: main.js
templates/: about.html  base.html  gallery.html  index.html  organizer.html  schedule.html
templates/blog/: index.html  post.html
templates/event/: event.html  index.html
